Adicionado novos endpoints em EleicaoControlador
- adicionado busca por ID;
- adicionado post para criar nova eleicao;
- adicionado dependência dev tools.

--- a/spring-api/src/main/resources/application.properties
+++ b/spring-api/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.port=8080
+spring.devtools.reload.trigger-file=.reloadtrigger
 #spring.flyway.url=jdbc:postgresql://${DB_SERVER}/${POSTGRES_DB}
 #spring.flyway.schemas=public
 #spring.flyway.user=${POSTGRES_USER}
